// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PayoutPeriodCalendar renders correctly 1`] = `
<div class="payout-period-calendar">
  <div class="payout-period-calendar__header">
    <div class="payout-period-calendar__header__year-selection"><button name="Decrement year" type="button" class="payout-period-calendar__header__year-selection__prev">
        <grayarrowlefticon-stub></grayarrowlefticon-stub>
      </button>
      <p class="payout-period-calendar__header__year-selection__year">2020</p> <button name="Increment year" type="button" class="payout-period-calendar__header__year-selection__next">
        <grayarrowlefticon-stub></grayarrowlefticon-stub>
      </button>
    </div> <button name="Select All Time" type="button" class="payout-period-calendar__header__all-time">All time</button>
  </div>
  <div class="payout-period-calendar__months-area"><button name="Select year 2020 month Jan" type="button" class="month-item">
      <p class="month-item__label">Jan</p>
    </button><button name="Select year 2020 month Feb" type="button" class="month-item">
      <p class="month-item__label">Feb</p>
    </button><button name="Select year 2020 month Mar" type="button" class="month-item disabled">
      <p class="month-item__label">Mar</p>
    </button><button name="Select year 2020 month Apr" type="button" class="month-item disabled">
      <p class="month-item__label">Apr</p>
    </button><button name="Select year 2020 month May" type="button" class="month-item disabled">
      <p class="month-item__label">May</p>
    </button><button name="Select year 2020 month Jun" type="button" class="month-item disabled">
      <p class="month-item__label">Jun</p>
    </button><button name="Select year 2020 month Jul" type="button" class="month-item disabled">
      <p class="month-item__label">Jul</p>
    </button><button name="Select year 2020 month Aug" type="button" class="month-item disabled">
      <p class="month-item__label">Aug</p>
    </button><button name="Select year 2020 month Sep" type="button" class="month-item disabled">
      <p class="month-item__label">Sep</p>
    </button><button name="Select year 2020 month Oct" type="button" class="month-item disabled">
      <p class="month-item__label">Oct</p>
    </button><button name="Select year 2020 month Nov" type="button" class="month-item disabled">
      <p class="month-item__label">Nov</p>
    </button><button name="Select year 2020 month Dec" type="button" class="month-item disabled">
      <p class="month-item__label">Dec</p>
    </button></div>
  <div class="payout-period-calendar__footer-area">
    <p class="payout-period-calendar__footer-area__period"></p> <button name="Submit" type="submit" class="payout-period-calendar__footer-area__ok-button">OK</button>
  </div>
</div>
`;

exports[`PayoutPeriodCalendar renders correctly 2`] = `
<div class="payout-period-calendar">
  <div class="payout-period-calendar__header">
    <div class="payout-period-calendar__header__year-selection"><button name="Decrement year" type="button" class="payout-period-calendar__header__year-selection__prev">
        <grayarrowlefticon-stub></grayarrowlefticon-stub>
      </button>
      <p class="payout-period-calendar__header__year-selection__year">2019</p> <button name="Increment year" type="button" class="payout-period-calendar__header__year-selection__next">
        <grayarrowlefticon-stub></grayarrowlefticon-stub>
      </button>
    </div> <button name="Select All Time" type="button" class="payout-period-calendar__header__all-time">All time</button>
  </div>
  <div class="payout-period-calendar__months-area"><button name="Select year 2019 month Jan" type="button" class="month-item disabled">
      <p class="month-item__label">Jan</p>
    </button><button name="Select year 2019 month Feb" type="button" class="month-item disabled">
      <p class="month-item__label">Feb</p>
    </button><button name="Select year 2019 month Mar" type="button" class="month-item disabled">
      <p class="month-item__label">Mar</p>
    </button><button name="Select year 2019 month Apr" type="button" class="month-item disabled">
      <p class="month-item__label">Apr</p>
    </button><button name="Select year 2019 month May" type="button" class="month-item disabled">
      <p class="month-item__label">May</p>
    </button><button name="Select year 2019 month Jun" type="button" class="month-item disabled">
      <p class="month-item__label">Jun</p>
    </button><button name="Select year 2019 month Jul" type="button" class="month-item disabled">
      <p class="month-item__label">Jul</p>
    </button><button name="Select year 2019 month Aug" type="button" class="month-item disabled">
      <p class="month-item__label">Aug</p>
    </button><button name="Select year 2019 month Sep" type="button" class="month-item disabled">
      <p class="month-item__label">Sep</p>
    </button><button name="Select year 2019 month Oct" type="button" class="month-item disabled">
      <p class="month-item__label">Oct</p>
    </button><button name="Select year 2019 month Nov" type="button" class="month-item disabled">
      <p class="month-item__label">Nov</p>
    </button><button name="Select year 2019 month Dec" type="button" class="month-item">
      <p class="month-item__label">Dec</p>
    </button></div>
  <div class="payout-period-calendar__footer-area">
    <p class="payout-period-calendar__footer-area__period"></p> <button name="Submit" type="submit" class="payout-period-calendar__footer-area__ok-button">OK</button>
  </div>
</div>
`;
